--- a/src/apps_common/google_maps/static/google_maps/scss/balloon.scss
+++ b/src/apps_common/google_maps/static/google_maps/scss/balloon.scss
@@ -1,38 +1,47 @@
 @import "mixins";
 
+$balloon_background: #FFF;
+$balloon_border: #C0C0C0;
+$balloon_shadow: #C0C0C0;
+$balloon_close_color: #C0C0C0;
+$arrow_height: 18px;
+$arrow_space: 6px;      // расстояние между маркером и стрелкой окна
+
+
 .gmap-balloon {
   position: absolute;
   min-width: 40px;
   min-height: 40px;
   z-index: 100;
-  padding-bottom: 16px;
+  padding-bottom: #{(0.866 * $arrow_height) + $arrow_space};   // 0.866 ~= sqrt(3) / 2
   @include border-box;
 
   .gmap-balloon-content {
     position: relative;
     max-width: 100%;
     z-index: 1;
-    background: $white;
+    background: $balloon_background;
+    border: 1px solid $balloon_border;
     @include border-box;
   }
 
   .gmap-balloon-arrow {
     position: absolute;
-    bottom: -15px;
+    bottom: #{-$arrow_height + $arrow_space};
     left: 50%;
     z-index: 10;
-    border: 18px solid transparent;
-    border-top: 18px solid rgba($gray, 0.5);
+    border: $arrow_height solid transparent;
+    border-top: $arrow_height solid rgba($balloon_border, 0.5);
     @include transform(translateX(-50%));
 
     &:before {
       content: '';
       position: absolute;
-      left: -18px;
-      top: -19px;
+      left: -$arrow_height;
+      top: -$arrow_height - 1;
       z-index: 1;
-      border: 18px solid transparent;
-      border-top: 18px solid $white;
+      border: $arrow_height solid transparent;
+      border-top: $arrow_height solid $balloon_background;
     }
   }
 
@@ -53,23 +62,11 @@
 .gmap-balloon {
   width: 80%;
   max-width: 350px;
-  padding-bottom: 22px;
-  @include media_interval(0, $media768) {
-    padding-bottom: 16px;
-  }
-
-  .gmap-balloon-arrow {
-    bottom: -13px;
-    @include media_interval(0, $media768) {
-      bottom: -19px;
-    }
-  }
 
   .gmap-balloon-content {
     width: 350px;
     padding: 20px;
-    border: 1px solid #C0C0C0;
-    @include box-shadow(8px 8px 10px rgba(0,0,0,0.15));
+    @include box-shadow(8px 8px 10px rgba($balloon_border, 1));
     @include border_radius(10px);
     @include media_interval(0, $media768) {
       padding: 14px;
@@ -85,9 +82,6 @@
     @include transition-property(-webkit-transform, transform);
     @include transition-duration(0.2s);
     @include transition-timing-function(ease-in);
-    @include media_interval(0, $media768) {
-      display: none;
-    }
 
     &:before, &:after {
       content: '';
@@ -96,7 +90,7 @@
       top: 50%;
       width: 100%;
       height: 2px;
-      background: $gray;
+      background: $balloon_close_color;
       @include transition-property(background);
       @include transition-duration(0.2s);
       @include transition-timing-function(ease-in);
