--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -33,6 +33,15 @@ $close_btn_weight: 3px;
   overflow-x: hidden;
   z-index: 101;
 
+  .popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  
   .popup-wrapper {
     height: 100%;
     @include valign_after;
@@ -96,16 +105,6 @@ $close_btn_weight: 3px;
     }
   }
 }
-
-#popup-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-}
-
 
 //=======================
 // Theme
