upd ckeditor pagephotos

--- a/src/apps_common/ckeditor/templates/ckeditor/popup_response.html
+++ b/src/apps_common/ckeditor/templates/ckeditor/popup_response.html
@@ -3,7 +3,7 @@
   <head><title></title></head>
   <body>
     <script>
-      opener.dismissPhotoChangePopup(window, "{{ newTag }}");
+      opener.dismissPhotoChangePopup(window, "{{ newTag }}", "{{ newId }}");
     </script>
   </body>
 </html>
