--- a/src/apps_common/paginator/static/paginator/scss/paginator.scss
+++ b/src/apps_common/paginator/static/paginator/scss/paginator.scss
@@ -35,6 +35,12 @@
     min-width: 1.8em;
     margin: 0 0.3em;
     text-align: center;
+    &:nth-child(1) {
+      margin-left: 0;
+    }
+    &:nth-last-child(1) {
+      margin-right: 0;
+    }
 
     &.zip-item {
       min-width: 1.2em;
