--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -5,6 +5,13 @@ form {
 }
 
 input[type="text"], input[type="password"], input[type="email"],
+input[type="number"], input[type="time"], textarea, select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+  @include border_radius(0);
+}
+
+input[type="text"], input[type="password"], input[type="email"],
 input[type="number"], input[type="time"], input[type="button"],
 input[type="submit"], select, textarea, button {
   width: 200px;
