--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -22,6 +22,15 @@ $close_btn_weight: 3px;
   overflow: hidden !important;
 }
 
+#popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
 #popup-container {
   position: fixed;
   top: 0;
@@ -33,15 +42,6 @@ $close_btn_weight: 3px;
   overflow-x: hidden;
   z-index: 101;
   @include font-size(20px);
-
-  .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
 
   .popup-wrapper {
     height: 100%;
@@ -113,12 +113,11 @@ $close_btn_weight: 3px;
 //=======================
 // Theme
 //=======================
+#popup-overlay {
+  background: rgba(0,0,0,0.4);
+}
+
 #popup-container {
-
-  .popup-overlay {
-    background: rgba(0,0,0,0.4);
-  }
-
   .popup-content {
     padding: 36px 50px;
     color: #FFF;
