--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -2,6 +2,7 @@
 
 {% load attachable_blocks %}
 {% load pipeline %}
+{% load i18n %}
 
 {% block static_head %}
   {{ block.super }}
@@ -31,7 +32,7 @@
       {% endfor %}
 
       <fieldset class="buttons">
-        <button type="submit">Send</button>
+        <button type="submit">{% trans 'Send' %}</button>
       </fieldset>
     </form>
   </div>
