--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -1,60 +1,63 @@
 ﻿{% load i18n %}
 
 {% if entity %}
-    <table class="admin-table">
-        <thead>
-            <tr>
-                <th>{% trans 'Image' %}</th>
-                <th>{% trans 'Title' %}</th>
-                <th>{% trans 'Serial number' %}</th>
-                <th>{% trans 'Price' %}</th>
-                <th>{% trans 'Count' %}</th>
-                <th>{% trans 'Total cost' %}</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for order_product in entity.order_products.all %}
-                <tr>
-                    <td style="text-align: center">
-                        <img src="{{ order_product.product.photo.small.url }}">
-                    </td>
-                    <td>
-                        <a href="{% url 'admin:shop_shopproduct_change' order_product.product.pk %}" target="_blank">{{ order_product.product.title }}</a>
-                    </td>
-                    <td>
-                        {{ order_product.product.serial }}
-                    </td>
-                    <td style="font-size: 14px; font-weight: bold; white-space: nowrap">
-                        {{ order_product.order_price.alternate }}
-                    </td>
-                    <td style="font-size: 14px; font-weight: bold;">
-                        {{ order_product.count }}
-                    </td>
-                    <td style="font-size: 14px; font-weight: bold; white-space: nowrap">
-                        {{ order_product.total_cost.alternate }}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="5">
-                    {% trans 'Total cost of products' %}
-                </td>
-                <td style="font-size: 15px; font-weight: bold; color: green; white-space: nowrap">
-                    {{ entity.products_cost.alternate }}
-                </td>
-            </tr>
-            <tr>
-                <td colspan="5">
-                    {% trans 'Total' %}
-                </td>
-                <td style="font-size: 18px; font-weight: bold; color: green; white-space: nowrap">
-                    {{ entity.total_cost.alternate }}
-                </td>
-            </tr>
-        </tfoot>
-    </table>
+  <table class="admin-table">
+    <thead>
+      <tr>
+        <th>{% trans 'Image' %}</th>
+        <th>{% trans 'Title' %}</th>
+        <th>{% trans 'Serial number' %}</th>
+        <th>{% trans 'Price' %}</th>
+        <th>{% trans 'Count' %}</th>
+        <th>{% trans 'Total cost' %}</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      {% for order_product in entity.order_products.all %}
+        <tr>
+          <td style="text-align: center">
+            <img src="{{ order_product.product.photo.small.url }}">
+          </td>
+          <td>
+            <a href="{% url 'admin:shop_shopproduct_change' order_product.product.pk %}"
+               target="_blank">{{ order_product.product.title }}</a>
+          </td>
+          <td>
+            {{ order_product.product.serial }}
+          </td>
+          <td style="font-size: 14px; font-weight: bold; white-space: nowrap">
+            {{ order_product.order_price.alternate }}
+          </td>
+          <td style="font-size: 14px; font-weight: bold;">
+            {{ order_product.count }}
+          </td>
+          <td style="font-size: 14px; font-weight: bold; white-space: nowrap">
+            {{ order_product.total_cost.alternate }}
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+
+    <tfoot>
+      <tr>
+        <td colspan="5">
+          {% trans 'Total cost of products' %}
+        </td>
+        <td style="font-size: 15px; font-weight: bold; color: green; white-space: nowrap">
+          {{ entity.products_cost.alternate }}
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          {% trans 'Total' %}
+        </td>
+        <td style="font-size: 18px; font-weight: bold; color: green; white-space: nowrap">
+          {{ entity.total_cost.alternate }}
+        </td>
+      </tr>
+    </tfoot>
+  </table>
 {% else %}
-    <div class="alert alert-info">{% trans 'You should create instance first' %}</div>
+  <div class="alert alert-info">{% trans 'You should create instance first' %}</div>
 {% endif %}
