--- a/src/apps/shop/templates/shop/mails/new_order.html
+++ b/src/apps/shop/templates/shop/mails/new_order.html
@@ -1,11 +1,10 @@
 {% load i18n %}
 
 <p>
-  {% blocktrans with domain=site.domain site=site.name %}New order was created at the
-    <a href="http://{{ domain }}/" target="_blank">{{ site }}</a>{% endblocktrans %}
+  {% blocktrans %}New order at the <a href="http://{{ domain }}/" target="_blank">{{ domain }}</a>{% endblocktrans %}
 </p>
 <p>
-  <a href="http://{{ site.domain }}{% url 'admin:shop_shoporder_change' order.pk %}" target="_blank">
+  <a href="http://{{ domain }}{% url 'admin:shop_shoporder_change' data.pk %}" target="_blank">
     {% trans 'See details' %}
   </a>
 </p>
