--- a/src/apps/shop/static/shop/scss/category.scss
+++ b/src/apps/shop/static/shop/scss/category.scss
@@ -1,2 +1,14 @@
 @import "mixins";
 
+.product-link {
+	color: #4040DA;
+	@include fontsize_default;
+}
+
+.list {
+	margin: 20px 0;
+
+	li {
+		padding: 3px 0;
+	}
+}
