--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -7,14 +7,14 @@
         <th>{% trans 'Image' %}</th>
         <th>{% trans 'Title' %}</th>
         <th>{% trans 'Serial number' %}</th>
-        <th>{% trans 'Price' %}</th>
+        <th>{% trans 'Price per unit' %}</th>
         <th>{% trans 'Count' %}</th>
         <th>{% trans 'Total cost' %}</th>
       </tr>
     </thead>
 
     <tbody>
-      {% for order_product in entity.order_products.all %}
+      {% for order_product in entity.records.all %}
         <tr>
           <td style="text-align: center">
             <img src="{{ order_product.product.photo.small.url }}">
