--- a/src/apps/shop/templates/shop/category.html
+++ b/src/apps/shop/templates/shop/category.html
@@ -16,6 +16,19 @@
 
 {% block content %}
 
+  <div class="block grid-block">
+    <h1 class="title-h1">{{ category.title }}</h1>
 
+    <ul class="list">
+      {% for product in category.products %}
+        <li>
+          <a href="{{ product.get_absolute_url }}" class="product-link">
+            <img src="{{ product.photo.admin_micro.url }}"/>
+            {{ product.title }} ({{ product.price.utf }})
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
 
 {% endblock content %}
