admin redirect "Home"

--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -1,6 +1,7 @@
 <!-- Updated jQuery -->
 <!-- added script "admin_jsi18n" -->
 <!-- added favicon -->
+<!-- removed "Home" from menu -->
 
 {% load admin_static %}{% load suit_tags %}{% load url from suit_compat %}<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
@@ -179,7 +180,7 @@
                 {% endwith %}
               {% endblock %}
 
-              {% include 'suit/menu.html' %}
+              {% include 'admin/menu.html' %}
 
             </div>
           {% endif %}
