--- a/src/apps_common/seo/templates/seo/admin/admin_include.html
+++ b/src/apps_common/seo/templates/seo/admin/admin_include.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
 {% if object_id %}
-  {{ adminForm.media }}
+  {{ seoDataForm.media }}
 
   <div class="alert alert-info">{% trans 'Attention! Errors in SEO form will not prevent saving of main form' %}</div>
-  {% for fieldset in adminForm %}
+  {% for fieldset in seoDataForm %}
     {% include 'admin/includes/fieldset.html' %}
   {% endfor %}
 {% else %}
