--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -1,6 +1,7 @@
 <!-- Updated jQuery -->
 <!-- added script "admin_jsi18n" -->
 <!-- added favicon -->
+<!-- hidden footer -->
 
 {% load admin_static %}{% load suit_tags %}{% load url from suit_compat %}<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
@@ -195,40 +196,6 @@
   {% endif %}
 
 </div>
-
-{% block footer %}
-  {% if not is_popup %}
-    <div id="footer" class="footer">
-      <div class="content">
-        <div class="tools">
-          {% block footer_links %}
-            <a href="http://djangosuit.com/support/" target="_blank" class="icon"><i class="icon-question-sign"></i>Support</a>
-            <a href="http://djangosuit.com/pricing/" target="_blank" class="icon"><i
-                class="icon-bookmark"></i>Licence</a>
-            <a href="http://github.com/darklow/django-suit/issues" target="_blank" class="icon"><i
-                class="icon-comment"></i>Report a bug</a>
-          {% endblock %}
-        </div>
-
-        <div class="copyright">
-          {% block copyright %}
-            Copyright &copy; 2013 DjangoSuit.com<br>Developed by
-            <a href="http://djangosuit.com" target="_blank">DjangoSuit.com</a>
-          {% endblock %}
-        </div>
-
-        <div class="branding">{% block footer_branding %}
-          {% with 'ADMIN_NAME'|suit_conf as admin_name %}
-            {{ admin_name }}
-            {% if admin_name == 'Django Suit' %}
-              v{{ 'VERSION'|suit_conf }}
-            {% endif %}
-          {% endwith %}
-        {% endblock %}</div>
-      </div>
-    </div>
-  {% endif %}
-{% endblock %}
 
 <script src="{% static 'suit/js/suit.js' %}"></script>
 {% block extrajs %}{% endblock %}
