fix group widget

--- a/src/static/admin/css/admin_fixes.css
+++ b/src/static/admin/css/admin_fixes.css
@@ -117,3 +117,8 @@ input[type=number] {
 .cke_panel {
     overflow: hidden !important;
 }
+
+
+.form-horizontal .control-group .controls .selector .selector-available select {
+    min-height: 200px;
+}
