--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -13,8 +13,8 @@
 
 {% block content %}
 
-  <div class="grid-block text-styles">
-    <div class="inner">
+  <div class="grid-block">
+    <div class="inner block text-styles">
       <div class="code title-h1">404</div>
       <div class="description">
         {% blocktrans %}
