--- a/src/apps/contacts/templates/contacts/block.html
+++ b/src/apps/contacts/templates/contacts/block.html
@@ -1,6 +1,8 @@
 <div id="follow-us" class="block">
   <div class="grid-block">
-    <div class="title-h1">{{ block.header }}</div>
+    {% if block.header %}
+      <div class="title-h1">{{ block.header }}</div>
+    {% endif %}
 
     <button class="contact-popup">Open popup</button>
   </div>
