--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -18,7 +18,7 @@
 {% block content %}
 
   <div id="contacts" class="block grid-block">
-    <div class="title-h1">{{ config.title }}</div>
+    <div class="title-h1">{{ config.header }}</div>
 
     <form method="post" action="">
       {% csrf_token %}
