--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -85,6 +85,28 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
+  input[type=text],
+	input[type=password],
+	input[type=email],
+	input[type=tel],
+	input[type=url],
+	input[type=search] {
+	  appearance: none;
+	  -moz-appearance: none;
+	  -webkit-appearance: none;
+
+	  border-radius: 0;
+	  -moz-border-radius: 0;
+	  -webkit-border-radius: 0;
+	}
+	input[type="number"] {
+	  -moz-appearance: textfield;
+
+	  &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+	    -webkit-appearance: none;
+	    margin: 0;
+	  }
+	}
   textarea {
     resize: none;
 	  overflow: auto;
