fix class names

--- a/src/apps/contacts/templates/contacts/block.html
+++ b/src/apps/contacts/templates/contacts/block.html
@@ -4,6 +4,6 @@
       <div class="title-h1">{{ block.header }}</div>
     {% endif %}
 
-    <button class="contact-popup">Open popup</button>
+    <button class="btn open-contact-popup">Open popup</button>
   </div>
 </div>
