--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -32,7 +32,7 @@
       {% endfor %}
 
       <fieldset class="buttons">
-        <button type="submit">{% trans 'Send' %}</button>
+        <button type="submit" class="btn">{% trans 'Send' %}</button>
       </fieldset>
     </form>
   </div>
