--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -7,6 +7,7 @@ form {
 input[type="text"], input[type="password"], input[type="email"],
 input[type="number"], textarea, select {
 	width: 200px;
+  max-width: 100%;
   padding: 5px 6px;
   border: 1px solid #808080;
 	@include font_default;
