--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -139,8 +139,9 @@ body {
   }
 }
 
-// кнопка
+// Кнопки
 .btn {
+  padding: 4px 20px;
   max-width: 100%;
   font-weight: bold;
   text-align: center;
