--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -129,6 +129,8 @@ $close_btn_weight: 3px;
   }
 
   .popup-close-button {
+    top: 10px;
+    right: 10px;
     @include transform(scale(0.8));
     @include transition-property(-webkit-transform, transform);
     @include transition-duration(0.2s);
