--- a/src/static/scss/mixins/_background.scss
+++ b/src/static/scss/mixins/_background.scss
@@ -12,6 +12,7 @@
   }
 }
 
+// background-size: rel-background-size(30px, 30px);
 @function rel-background-size($img_w, $img_h, $sprite_w:$sprite_width, $sprite_h:$sprite_height) {
   $offset_left: 100 * $sprite_w / $img_w;
 	$offset_top: 100 * $sprite_h / $img_h;
@@ -19,6 +20,7 @@
 	@return #{$offset_left + "%"} #{$offset_top + "%"}
 }
 
+// background: $sprite_url no-repeat rel-background-position(30px, 30px, 0px -60px);
 @function rel-background-position($img_w, $img_h, $offset_x, $offset_y, $sprite_w:$sprite_width, $sprite_h:$sprite_height) {
   @if ($img_w >= $sprite_w) {
 	  $offset_left: 0;
