--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -95,8 +95,8 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    min-width: 100.1%;
-    min-height: 100.1%;
+    min-width: 100.2%;
+    min-height: 100.2%;
     z-index: 3;
     @include backface-visibility(hidden);
     @include transform(translate3d(-50%, -50%, 0));
@@ -141,6 +141,7 @@ body {
 
 // Кнопки
 .btn {
+  display: inline-block;
   padding: 4px 20px;
   max-width: 100%;
   font-weight: bold;
