--- a/src/apps/contacts/templates/contacts/block.html
+++ b/src/apps/contacts/templates/contacts/block.html
@@ -1,4 +1,4 @@
-<div id="follow-us" class="block">
+<div id="contact-us" class="block">
   <div class="grid-block">
     {% if block.header %}
       <div class="title-h1">{{ block.header }}</div>
