--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -47,8 +47,9 @@ $sprite_height: 106px;
 
 
 //=======================
-// Текст
+// Цвета
 //=======================
+$white: #FFFFFF;
 $text_color: #2C3035;
 
 
