--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -142,10 +142,12 @@ body {
 // Кнопки
 .btn {
   display: inline-block;
-  padding: 4px 20px;
+  padding: 8px 20px;
   max-width: 100%;
+  color: $white;
   font-weight: bold;
   text-align: center;
+  background: #A0A0A0;
   @include border-box;
   @include fontsize_default;
 }
