win_height_slider + section_slider

--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -35,6 +35,10 @@
 
 .no-slider {
 	// Скрытие всех слайдов, кроме первого
+	.slider-item ~ .slider-item {
+    display: none;
+  }
+
 	.slider-slide ~ .slider-slide {
     display: none;
   }
