--- a/src/apps/contacts/templates/contacts/ajax_contact.html
+++ b/src/apps/contacts/templates/contacts/ajax_contact.html
@@ -7,6 +7,11 @@
   {% csrf_token %}
 
   {{ form.non_field_errors.as_ul }}
+  
+  {% for field in form.hidden_fields %}
+    {{ field }}
+  {% endfor %}  
+  
   {% for field in form.visible_fields %}
     <fieldset class="{{ field.errors.classes }}">
       {{ field }}
