--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -135,7 +135,7 @@ $mobile_active_color: $active_color;
   }
   &:before {
     top: 0;
-    box-shadow: $menu_burger_color 0 ($menu_burger_line_height + $menu_burger_line_space) 0 0;
+    @include box-shadow($menu_burger_color 0 ($menu_burger_line_height + $menu_burger_line_space) 0 0);
     @include transform(translate3d(0, 0, 0) rotate(0deg));
     @include transition-property(-webkit-transform, transform, box-shadow, top);
     @include transition-duration(0.55s, 0.55s, 0.2s, 0.2s);
