--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -26,6 +26,11 @@
   <!--[if lte IE 9]>
     <script type="text/javascript" src="/static/polyfills/es5_polyfill.js"></script>
   <![endif]-->
+  <script>
+      // for Picturefill.js
+      document.createElement( "picture" );
+  </script>
+  <script src="static/polyfills/jquery.picturefill.min.js" async></script>
 
   {% opengraph %}
 
@@ -91,6 +96,8 @@
 <!--[if lte IE 9]>
   <script type="text/javascript" src="/static/polyfills/flexie.min.js"></script>
   <script type="text/javascript" src="/static/polyfills/respond.min.js"></script>
+  <script type="text/javascript" src="/static/polyfills/polyfill.min.js"></script>
+  <script type="text/javascript" src="/static/polyfills/svg_to_png.js"></script>
 <![endif]-->
 
 {% seo_counters 'body_bottom' %}
