--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -30,7 +30,7 @@
       // for Picturefill.js
       document.createElement( "picture" );
   </script>
-  <script src="static/polyfills/jquery.picturefill.min.js" async></script>
+  <script src="/static/polyfills/jquery.picturefill.min.js" async></script>
 
   {% opengraph %}
 
