--- a/src/static/scss/section_slider.scss
+++ b/src/static/scss/section_slider.scss
@@ -1,80 +1,75 @@
 @import 'mixins';
 
 /*
-		Для случая слайдера фоток на фоне блока с единым контентом под все слайды.
+  Для случая слайдера фоток на фоне блока с единым контентом под все слайды.
 
-		Если блок должен быть на всю высоту, то в JS следует создавать
-		WinHeightSlider вместо обычного Slider.
+  Если блок должен быть на всю высоту, то в JS следует создавать
+  WinHeightSlider вместо обычного Slider.
 
-		<div class="section section-slider section-full-height">
-	    <div class="section-inner">
-	      <div class="slider no-slider">
-	        <img class="slider-item" src="{% static 'pic1.jpg' %}">
-	        <img class="slider-item" src="{% static 'pic2.jpg' %}">
+  <div class="section section-slider section-full-height">
+    <div class="section-inner">
+      <div class="slider no-slider">
+        <img class="slider-item" src="{% static 'pic1.jpg' %}">
+        <img class="slider-item" src="{% static 'pic2.jpg' %}">
 
-	        <div class="overlay">
-	          <div class="grid-block">
-	            ...
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
+        <div class="overlay">
+          <div class="grid-block">
+            ...
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	  JS:
-	    WinHeightSlider('.top-section .slider', {
-          loop: true,
-          itemSelector: '.slider-item'
-      }).attachPlugins([
-          SliderSideAnimation({}),
-          SliderSideShortestAnimation({}),
-          SliderControlsPlugin({
-              animationName: 'side-shortest'
-          }),
-          SliderNavigationPlugin({
-              animationName: 'side',
-              container: '.slider-list-wrapper'
-          }),
-          SliderAutoscrollPlugin({
-              animationName: 'fade',
-              interval: 6000
-          })
-      ]);
+  JS:
+    WinHeightSlider('.top-section .slider', {
+      loop: true,
+      itemSelector: '.slider-item'
+    }).attachPlugins([
+      SliderSideAnimation({}),
+      SliderSideShortestAnimation({}),
+      SliderControlsPlugin({
+        animationName: 'side-shortest'
+      }),
+      SliderNavigationPlugin({
+        animationName: 'side',
+        container: '.slider-list-wrapper'
+      })
+    ]);
 */
 
 .section-slider {
-	.section-inner {
-		min-height: inherit;
-	}
-
-	.overlay {
-		position: relative;
-		display: inline-block;
-		width: 100%;
-		z-index: 10;
-		vertical-align: middle;
-		@include media_interval(0, $media1024) {
-			padding-bottom: 128px;
-		}
-	}
-
-	.slider-item {
-    position: relative;
-    left: 50%;
-    z-index: 1;
-    max-width: none;
-    min-height: 100%;
-    min-width: 100%;
-    @include transform(translateX(-50%));
+  .section-inner {
+    height: inherit;
+    min-height: inherit;
   }
 
-	// до загрузки JS
+  .overlay {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    z-index: 10;
+    vertical-align: middle;
+    @include media_interval(0, $media1024) {
+      padding-bottom: 128px;
+    }
+  }
+
+  // до загрузки JS
   .no-slider {
-	  min-height: inherit;
+    height: 100%;
+    min-height: inherit;
+    @include valign_after;
 
     .slider-item:nth-of-type(1) {
       position: absolute;
-      top: 0;
+    }
+  }
+
+  // после загрузки JS
+  .slider-root {
+    .slider-slide {
+      height: 100%;
     }
   }
 }
