--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -6,6 +6,11 @@ $dot_size: 12px;
 
 // Navigation
 .slider-navigation {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 10px;
+  z-index: 9;
   text-align: center;
   @include valign_after;
   @include unselectable;
@@ -44,14 +49,12 @@ $dot_size: 12px;
     &:hover {
       span {
         background-color: rgba(#3B91CA, 0.5);
-        @include transform(scale(1.3));
       }
     }
 
     &.active {
       span {
         background-color: rgba(#3B91CA, 1);
-        @include transform(scale(1.3));
       }
     }
   }
